# sandbox

./: .gitignore  README.md
async_serial_comm/arduino_answer_delay/: arduino_answer_delay.ino
async_serial_comm/async_serial_py/: README.md  pyproject.toml
async_serial_comm/async_serial_py/src/async_serial_py/: __init__.py  comm.py
async_serial_comm/async_serial_py/tmp/: experiment.py
play_with_iced/: Cargo.toml
play_with_iced/src/: main.rs
postcard_ex/: Cargo.toml  README.md
postcard_ex/src/: commands.rs  main.rs
rp235x_postcard_rpc_broadcast/icd/: Cargo.toml
rp235x_postcard_rpc_broadcast/icd/src/: lib.rs
rp235x_postcard_rpc_broadcast/rp2350/: Cargo.toml  build.rs
rp235x_postcard_rpc_broadcast/rp2350/.cargo/: config.toml
rp235x_postcard_rpc_broadcast/rp2350/src/: app.rs  handlers.rs  main.rs
rust_python_test/: .gitignore  Cargo.toml  README.md  pyproject.toml
rust_python_test/python/rust_python_test/: __init__.py
rust_python_test/src/: lib.rs
slint-tokio-combined/: Cargo.toml  LICENSE  README.md
slint-tokio-combined/src/: main.rs  my_async.rs
slint-tokio-combined/ui/: app-window.slint
slint_testapp/: Cargo.toml  README.md  build.rs
slint_testapp/src/: main.rs
slint_testapp/ui/: appwindow.slint  dialog_page.slint  main_page.slint
teensy4-rs/: README.md
teensy4-rs/rtic_blink_two_leds/: Cargo.toml
teensy4-rs/rtic_blink_two_leds/src/: main.rs
teensy4-rs/rtic_button_interrupt/: Cargo.toml  README.md
teensy4-rs/rtic_button_interrupt/src/: main.rs
teensy4-rs/rtic_defmt_usb_log/: Cargo.toml
teensy4-rs/rtic_defmt_usb_log/.cargo/: config.toml
teensy4-rs/rtic_defmt_usb_log/src/: main.rs
teensy4-rs/rtic_i2c_ssd1306/: Cargo.toml  justfile
teensy4-rs/rtic_i2c_ssd1306/src/: main.rs
teensy4-rs/rtic_pit_button_counter/: .gitignore  Cargo.toml  justfile
teensy4-rs/rtic_pit_button_counter/src/: main.rs
teensy4-rs/rtic_usb_serial/: Cargo.toml  justfile
teensy4-rs/rtic_usb_serial/src/: main.rs
teensy4-rs/spi_ic_md/: Cargo.toml
teensy4-rs/spi_ic_md/src/: main.rs
