[package]
name = "rust-python-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_python_test"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.4", features = ["extension-module"] }

