[package]
name = "slint-tokio-combined"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compat = "0.2.4"
slint = "1.12.0"
tokio = { version = "1.45.1", features = ["full"] }

[build-dependencies]
slint-build = "1.12.0"
