[package]
name = "template-rp2350"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m                = { version = "0.7.6", features = ["inline-asm"] }
embassy-executor        = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp              = { version = "0.3.1", features = ["rp235xa", "defmt", "unstable-pac", "time-driver", "critical-section-impl", "binary-info"] }
embassy-sync            = { version = "0.6.0", features = ["defmt"] }
embassy-time            = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb             = { version = "0.4.0", features = ["defmt"] }
panic-probe             = { version = "0.3",   features = ["print-defmt"] }
postcard-rpc            = { version = "0.11.0",   features = ["embassy-usb-0_4-server"] }
postcard                = { version = "1.1.0" }
postcard-schema         = { version = "0.2.0", features = ["derive"] }
portable-atomic         = { version = "1.6.0", features = ["critical-section"] }
cortex-m-rt             = "0.7.0"
defmt                   = "0.3"
defmt-rtt               = "0.4"
static_cell             = "2.1"
template-icd            = { path = "../icd" }

[profile.release]
debug = 2
lto = true
opt-level = 'z'
codegen-units = 1
incremental = false

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false
