[package]
name = "rtic_defmt_usb_log"
version = "0.1.0"
edition = "2021"

[dependencies]
rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1", default-features = false, features = ["cortex-m-systick"] }

defmt = { version = "0.3" }
defmt-bbq = { version = "0.1" }

usb-device = { version = "0.2" }
usbd-serial = { version = "0.1" }

teensy4-panic = { version = "0.2", features = ["log"] }

[dependencies.teensy4-bsp]
version = "0.5"
features = [
    # Use the BSP's runtime.
    "rt",
]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
