[package]
name = "spi_ic_md"
version = "0.1.0"
edition = "2021"

[dependencies]
rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2", default-features = false, features = ["imxrt_gpt1"] }

# Remove these if you don't want logging.
imxrt-log = { version = "0.1", default-features = false, features = ["log", "usbd"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }

teensy4-panic = { version = "0.2", features = ["log"] }
embedded-hal = "0.2"

[dependencies.teensy4-bsp]
version = "0.5"
features = [
    # Use the BSP's runtime.
    "rt",
]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
